# kokkos_hello

./: .gitignore  CMakeLists.txt  README.md  view.cpp
sanity_check/: Makefile  README.md  do_cmake  view_check_print.cpp
